# qemu

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Kconfig.host  MAINTAINERS  Makefile  Makefile.dis  Makefile.hw  Makefile.objs  Makefile.target  acl.c  aio-posix.c  aio-win32.c  aio.c  arch_init.c  arm-semi.c  async.c  balloon.c  block-migration.c  block.c  block.h  block_int.h  blockdev.c  blockjob.c  blockjob.h  bt-host.c  check-json.c  check-qdict.c  check-qstring.c  configure  coroutine-sigaltstack.c  coroutine-ucontext.c  coroutine-win32.c  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec-common.c  cpu-exec.c  cpus-common.c  (+102 more)
QMP/: qmp-events.txt
accel/: meson.build
audio/: audio.c  audio_int.h  meson.build  mixeng.c
authz/: meson.build
backends/: Makefile.objs  baum.c  hostmem-file.c  hostmem-ram.c  hostmem.c  meson.build  rng.c  tpm.c
block/: Makefile.objs  accounting.c  archipelago.c  backup.c  blkdebug.c  blkmirror.c  blkverify.c  block-backend.c  bochs.c  cloop.c  commit.c  cow.c  curl.c  dirty-bitmap.c  dmg.c  file-posix.c  file-win32.c  gluster.c  io.c  iscsi.c  linux-aio.c  meson.build  mirror.c  nbd-client.c  nbd.c  nfs.c  null.c  parallels.c  qapi.c  qcow.c  qcow2-cluster.c  qcow2-refcount.c  qcow2.c  qcow2.h  qed-cluster.c  qed-table.c  qed.c  qed.h  quorum.c  raw-aio.h  (+19 more)
bsd-user/: main.c  mmap.c  qemu.h
chardev/: Makefile.objs  meson.build
crypto/: Makefile.objs  meson.build
darwin-user/: machload.c  main.c  qemu.h  syscall.c
default-configs/: i386-softmmu.mak  pci.mak  x86_64-softmmu.mak
docs/: aio_poll_drain.promela  aio_poll_drain_bug.promela  aio_poll_sync_io.promela  can.txt  live-block-ops.txt  meson.build  multiple-iothreads.txt  rcu.txt  tcg-exclusive.promela
docs/devel/: multiple-iothreads.txt  testing.rst  tracing.txt
docs/qmp/: qmp-events.txt
fsdev/: meson.build
hw/: Makefile.objs  acpi_piix4.c  apic.c  armv7m.c  axis_dev88.c  bt.c  bt.h  cadence_gem.c  ccid-card-emulated.c  dma.c  dp8393x.c  eepro100.c  esp.c  esp.h  etraxfs.c  etraxfs.h  etraxfs_dma.c  etraxfs_dma.h  etraxfs_eth.c  etraxfs_pic.c  fdc.c  fmopl.c  i2c.c  i82374.c  i82378.c  i8254.c  i8254_common.c  integratorcp.c  intel-hda.c  isa-bus.c  isa.h  lan9118.c  lance.c  lsi53c895a.c  m48t59.c  marvell_88w8618_audio.c  mc146818rtc.c  mcf_fec.c  meson.build  milkymist-memcard.c  (+91 more)
hw/i386/: Kconfig  kvmvapic.c  meson.build  pc.c  pc_piix.c  pc_q35.c
hw/i386/kvm/: meson.build  pci-assign.c
hw/mips/: cputimer.c  meson.build
hw/misc/: ivshmem.c  meson.build  pci-testdev.c  tmp105.c  vfio.c
hw/misc/macio/: cuda.c
hw/nvram/: mac_nvram.c  meson.build
hw/sd/: meson.build  sdhci.c  sdhci.h
hw/timer/: a9gtimer.c  arm_mptimer.c  cadence_ttc.c  hpet.c  i8254.c  m48t59.c  mc146818rtc.c  meson.build  omap_gptimer.c  pl031.c  pxa2xx_timer.c  tusb6010.c  twl92230.c
hw/tpm/: Kconfig  meson.build  tpm_tis.c
hw/usb/: bus.c  dev-network.c  dev-smartcard-reader.c  dev-storage.c  dev-uas.c  hcd-ehci.c  hcd-ehci.h  hcd-musb.c  hcd-ohci.c  hcd-uhci.c  hcd-xhci.c  host-libusb.c  meson.build  redirect.c  xen-usb.c
hw/xen/: meson.build  xen_pt.c  xen_pt.h  xen_pt_config_init.c  xen_pt_msi.c
include/: qemu-common.h
io/: channel-socket.c  channel-watch.c  meson.build
libcacard/: Makefile  cac.c  event.c  vcard_emul_nss.c  vscclient.c
linux-user/: elfload.c  main.c  meson.build  qemu.h  signal.c  syscall.c
linux-user/arm/nwfpe/: fpa11.h
migration/: block.c  meson.build  ram.c  savevm.c
monitor/: meson.build  misc.c
nbd/: server.c
net/: meson.build  net.c  socket.c
pc-bios/: meson.build
pc-bios/keymaps/: meson.build
pc-bios/optionrom/: Makefile  linuxboot_dma.c  meson.build
pc-bios/s390-ccw/: Makefile  meson.build
pc-bios/spapr-rtas/: Makefile
qapi/: Makefile.objs  meson.build  qapi-visit-core.c  qmp-dispatch.c  qmp-input-visitor.c
qga/: Makefile.objs  channel-posix.c  commands-posix.c  commands-win32.c  commands.c  main.c  meson.build
qom/: Makefile.objs  meson.build  object.c  object_interfaces.c
replay/: meson.build
scripts/: check-qerror.sh  create_config  decodetree.py  device-crash-test  feature_to_c.sh  hxtool  make_device_config.sh  minikconf.py  ninjatool.py  nsis.sh  qapi-gen.py  qapi-visit.py  qemu-binfmt-conf.sh  refresh-pxe-roms.sh  signrom.py  signrom.sh  tracetool  update-linux-headers.sh
scsi/: qemu-pr-helper.c
slirp/: ip_icmp.c  misc.c  slirp.c  slirp.h  socket.c  tcp_input.c  tcp_subr.c  udp.c
stubs/: Makefile.objs  iothread-lock.c  iothread.c  meson.build
target-alpha/: cpu-qom.h  cpu.h  exec.h  helper.c  op_helper.c  sys_helper.c  (+1 more)
tests/: .gitignore  Makefile  Makefile.include  ac97-test.c  avocado-test.sh  avocado-venv.sh  check-block.sh  drive_del-test.c  e1000-test.c  e1000e-test.c  eepro100-test.c  es1370-test.c  ide-test.c  ipoctal232-test.c  ivshmem-test.c  libqtest.c  meson.build  ne2000-test.c  nvme-test.c  pcnet-test.c  qos-test.c  rcutorture.c  rtas-test.c  rtc-test.c  spapr-phb-test.c  test-aio.c  test-char.c  test-hbitmap.c  test-qga.c  test-qgraph.c  test-qmp-input-strict.c  test-qmp-input-visitor.c  test-rcu-list.c  test-tls.c  test-vmstate.c  tpci200-test.c  usb-hcd-ehci-test.c  usb-hcd-ohci-test.c  vhost-user-test.c  virtio-9p-test.c  (+7 more)
tests/acceptance/avocado_qemu/: __init__.py
tests/cris/: Makefile
tests/data/acpi/: rebuild-expected-aml.sh
tests/decode/: meson.build
tests/fp/: meson.build
tests/include/: meson.build
tests/libqos/: aarch64-xlnx-zcu102-machine.c  arm-raspi2-machine.c  arm-sabrelite-machine.c  arm-smdkc210-machine.c  arm-virt-machine.c  arm-xilinx-zynq-a9-machine.c  e1000e.c  meson.build  pci.c  pci.h  ppc64_pseries-machine.c  qgraph.c  qgraph.h  qgraph_extra.h  qgraph_internal.h  sdhci.c  virtio-9p.c  virtio-balloon.c  virtio-blk.c  virtio-mmio.c  virtio-net.c  virtio-pci.c  virtio-pci.h  virtio-rng.c  virtio-scsi.c  virtio-serial.c  virtio.c  virtio.h  x86_64_pc-machine.c
tests/lm32/: Makefile
tests/qapi-schema/: meson.build  test-qapi.sh
tests/qemu-iotests/: 005  060  060.out  118  check  group  meson.build
tests/tcg/: Makefile.target  test-i386.c
(+433 files in other folders)
